header in progress

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <header>
+      <load ="partials/header.html" />
+    </header>
+
+    <!-- <main>
+      <load ="partials/hero.html" />
+      <load ="partials/qouteHome.html" />
+      <load ="partials/exercises.html" />
+      <load ="partials/exerciseGroup.html" />
+      <load ="partials/info.html" />
+      <load ="partials/scrollTopBtn.html" />
+    </main>
+
+    <footer>
+      <load ="partials/footer.html" />
+      <load ="partials/privacyPolicy.html" />
+      <load ="partials/termsOfService.html" />
+    </footer> -->
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
