--- a/src/favorites.html
+++ b/src/favorites.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Favorites</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -24,12 +23,6 @@
     <header>
       <load ="partials/header.html" />
     </header>
-
-    <!-- <main>
-    </main>
-
-    <footer>
-    </footer> -->
 
     <script type="module" src="./main.js"></script>
   </body>
