--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,11 @@
       <load ="partials/header.html" />
     </header>
 
-    <!-- <main>
+    <main>
+      <load ="partials/hero.html" />
     </main>
 
-    <footer>
-    </footer> -->
+    <footer></footer>
 
     <script type="module" src="./main.js"></script>
   </body>
